[package]
name = "test_bincode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { branch="trunk", features = ["serde"], git="https://github.com/bincode-org/bincode" }
bincode133 = { version = "1.3.3", package = "bincode" }
serde = { version="1.0.137", features=["derive"], default-features=false}
glam = {version="0.20.5", features=["serde"]}